--- a/dashboard.html
+++ b/dashboard.html
@@ -8,37 +8,95 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="bg-light">
 
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark navbar-custom fixed-top shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand logo" href="#">CURRAL BONITO</a>
             <div>
                 <span class="navbar-text me-3">
                     Bem-vindo, <strong id="username-display"></strong>!
                 </span>
-                <button class="btn btn-danger" id="logout-button">Sair <i class="bi bi-box-arrow-right"></i></button>
+                <button class="btn btn-outline-light" id="logout-button">Sair <i class="bi bi-box-arrow-right"></i></button>
             </div>
         </div>
     </nav>
 
     <div class="container mt-5 pt-5">
-        <h2 class="mb-4">Painel de Controle</h2>
+        <h2 class="mb-4 section-title-dashboard">Painel de Controle</h2>
+
+        <!-- Cards de Resumo -->
+        <div class="row">
+            <!-- Painel Financeiro Resumo -->
+            <div class="col-lg-8">
+                <div class="card info-card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="bi bi-cash-coin"></i> Resumo Financeiro</h5>
+                        <div class="row text-center mt-3">
+                            <div class="col-4">
+                                <p class="mb-1 text-success fs-5 fw-bold" id="total-receitas">R$ 0,00</p>
+                                <small class="text-muted">Receitas</small>
+                            </div>
+                            <div class="col-4">
+                                <p class="mb-1 text-danger fs-5 fw-bold" id="total-despesas">R$ 0,00</p>
+                                <small class="text-muted">Despesas</small>
+                            </div>
+                            <div class="col-4">
+                                <p class="mb-1 text-primary fs-5 fw-bold" id="saldo-total">R$ 0,00</p>
+                                <small class="text-muted">Saldo Atual</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Controle de Pastagem (UA) -->
+            <div class="col-lg-4">
+                <div class="card info-card shadow-sm">
+                    <div class="card-body">
+                         <h5 class="card-title"><i class="bi bi-rulers"></i> Controle de Pastagem</h5>
+                         <div class="text-center mt-3">
+                             <p class="mb-1 text-primary fs-5 fw-bold" id="total-ua">0.0 UA</p>
+                             <small class="text-muted">Total de Unidades Animais</small>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Seção de Lançamento Financeiro -->
+        <div class="card shadow-sm mt-4">
+            <div class="card-header"><h3><i class="bi bi-calculator"></i> Lançar Receita/Despesa</h3></div>
+            <div class="card-body">
+                <form id="financeiro-form">
+                    <div class="row">
+                        <div class="col-md-3 mb-3"><label for="fin-data" class="form-label">Data</label><input type="date" class="form-control" id="fin-data" required></div>
+                        <div class="col-md-4 mb-3"><label for="fin-desc" class="form-label">Descrição</label><input type="text" class="form-control" id="fin-desc" placeholder="Ex: Venda de 10 bezerros" required></div>
+                        <div class="col-md-2 mb-3"><label for="fin-valor" class="form-label">Valor (R$)</label><input type="number" step="0.01" class="form-control" id="fin-valor" placeholder="1500.00" required></div>
+                        <div class="col-md-3 mb-3"><label for="fin-tipo" class="form-label">Tipo</label><select class="form-select" id="fin-tipo" required><option value="receita">Receita</option><option value="despesa">Despesa</option></select></div>
+                    </div>
+                    <button type="submit" class="btn btn-primary-custom"><i class="bi bi-check-circle"></i> Lançar</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Histórico Financeiro -->
+        <div class="card shadow-sm mt-4">
+             <div class="card-header"><h3><i class="bi bi-archive"></i> Histórico Financeiro</h3></div>
+             <div class="card-body"><div class="table-responsive"><table class="table table-striped table-hover"><thead><tr><th>Data</th><th>Descrição</th><th>Valor (R$)</th><th>Tipo</th><th>Ações</th></tr></thead><tbody id="financeiro-table-body"></tbody></table></div></div>
+        </div>
 
         <!-- Seção de Cadastro de Gado -->
-        <div class="card shadow-sm mb-4">
-            <div class="card-header">
-                <h3><i class="bi bi-journal-plus"></i> Registro de Animais</h3>
-            </div>
+        <div class="card shadow-sm mt-5">
+            <div class="card-header"><h3><i class="bi bi-journal-plus"></i> Registro de Animais</h3></div>
             <div class="card-body">
                 <form id="gado-form">
                     <div class="row">
                         <div class="col-md-3 mb-3"><label for="id-animal" class="form-label">Brinco / ID</label><input type="text" class="form-control" id="id-animal" placeholder="Ex: 1234" required></div>
-                        <div class="col-md-3 mb-3"><label for="nome-animal" class="form-label">Nome (opcional)</label><input type="text" class="form-control" id="nome-animal" placeholder="Ex: Mimosa"></div>
+                        <div class="col-md-3 mb-3"><label for="categoria-animal" class="form-label">Categoria (UA)</label><select class="form-select" id="categoria-animal" required><option value="" disabled selected>Selecione</option><option value="vaca">Vaca</option><option value="touro">Touro</option><option value="novilha">Novilha (>24m)</option><option value="garrote">Garrote (12-24m)</option><option value="bezerro">Bezerro(a) (0-12m)</option></select></div>
                         <div class="col-md-3 mb-3"><label for="raca-animal" class="form-label">Raça</label><input type="text" class="form-control" id="raca-animal" placeholder="Ex: Nelore" required></div>
                         <div class="col-md-3 mb-3"><label for="nascimento-animal" class="form-label">Data de Nascimento</label><input type="date" class="form-control" id="nascimento-animal" required></div>
                     </div>
-                    <button type="submit" class="btn btn-success"><i class="bi bi-plus-circle"></i> Adicionar Animal</button>
+                    <button type="submit" class="btn btn-primary-custom"><i class="bi bi-plus-circle"></i> Adicionar Animal</button>
                 </form>
             </div>
         </div>
@@ -46,44 +104,44 @@
         <!-- Tabela de Gado -->
         <div class="card shadow-sm mt-4">
              <div class="card-header"><h3><i class="bi bi-view-list"></i> Meu Rebanho</h3></div>
-             <div class="card-body">
-                 <div class="table-responsive"><table class="table table-striped table-hover"><thead><tr><th>Brinco / ID</th><th>Nome</th><th>Raça</th><th>Nascimento</th><th>Idade</th><th>Ações</th></tr></thead><tbody id="gado-table-body"></tbody></table></div>
-             </div>
+             <div class="card-body"><div class="table-responsive"><table class="table table-striped table-hover"><thead><tr><th>Brinco / ID</th><th>Categoria</th><th>Raça</th><th>Nascimento</th><th>Idade</th><th>Ações</th></tr></thead><tbody id="gado-table-body"></tbody></table></div></div>
         </div>
-
-        <!-- Seção de Controle Sanitário -->
+        
+        <!-- Seção de Controle Sanitário (Minimizada por padrão) -->
         <div class="card shadow-sm mt-5">
-            <div class="card-header"><h3><i class="bi bi-eyedropper"></i> Controle Sanitário</h3></div>
-            <div class="card-body">
-                <form id="sanitario-form">
-                    <div class="row">
-                        <div class="col-md-3 mb-3">
-                            <label for="animal-select" class="form-label">Animal (Brinco/ID)</label>
-                            <select class="form-select" id="animal-select" required><option value="" disabled selected>Selecione um animal</option></select>
+            <h2 class="card-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSanitario">
+                    <i class="bi bi-eyedropper me-2"></i> Controle Sanitário
+                </button>
+            </h2>
+            <div id="collapseSanitario" class="accordion-collapse collapse">
+                <div class="card-body">
+                    <form id="sanitario-form">
+                        <div class="row">
+                            <div class="col-md-3 mb-3"><label for="animal-select" class="form-label">Animal (Brinco/ID)</label><select class="form-select" id="animal-select" required><option value="" disabled selected>Selecione</option></select></div>
+                            <div class="col-md-3 mb-3"><label for="produto" class="form-label">Vacina/Produto</label><input type="text" class="form-control" id="produto" placeholder="Ex: Vacina Aftosa" required></div>
+                            <div class="col-md-3 mb-3"><label for="data-aplicacao" class="form-label">Data da Aplicação</label><input type="date" class="form-control" id="data-aplicacao" required></div>
+                            <div class="col-md-3 mb-3"><label for="obs" class="form-label">Observações</label><input type="text" class="form-control" id="obs" placeholder="Ex: Dose de reforço"></div>
                         </div>
-                        <div class="col-md-3 mb-3"><label for="produto" class="form-label">Vacina/Produto</label><input type="text" class="form-control" id="produto" placeholder="Ex: Vacina Aftosa" required></div>
-                        <div class="col-md-3 mb-3"><label for="data-aplicacao" class="form-label">Data da Aplicação</label><input type="date" class="form-control" id="data-aplicacao" required></div>
-                        <div class="col-md-3 mb-3"><label for="obs" class="form-label">Observações</label><input type="text" class="form-control" id="obs" placeholder="Ex: Dose de reforço"></div>
+                        <button type="submit" class="btn btn-primary-custom"><i class="bi bi-plus-circle"></i> Registrar Manejo</button>
+                    </form>
+                    <hr>
+                    <div class="table-responsive mt-3">
+                        <h5 class="mb-3">Histórico de Manejos</h5>
+                        <table class="table table-sm table-bordered"><thead><tr><th>Animal (ID)</th><th>Produto</th><th>Data</th><th>Obs.</th><th>Ações</th></tr></thead><tbody id="sanitario-table-body"></tbody></table>
                     </div>
-                    <button type="submit" class="btn btn-primary"><i class="bi bi-plus-circle"></i> Registrar Manejo</button>
-                </form>
+                </div>
             </div>
-        </div>
-
-        <!-- Tabela de Controle Sanitário -->
-        <div class="card shadow-sm mt-4">
-             <div class="card-header"><h3><i class="bi bi-calendar2-check"></i> Histórico de Manejos</h3></div>
-             <div class="card-body">
-                 <div class="table-responsive"><table class="table table-striped table-hover"><thead><tr><th>Animal (ID)</th><th>Produto</th><th>Data</th><th>Observações</th><th>Ações</th></tr></thead><tbody id="sanitario-table-body"></tbody></table></div>
-             </div>
         </div>
 
         <footer class="text-center mt-5 mb-4">
              <p class="text-muted">** Todas as informações são criptografadas e salvas localmente no seu navegador. **</p>
-             <p class="text-muted">&copy; 2025 Curral Bonito. Versão 2.0</p>
+             <p class="text-muted">&copy; 2025 Curral Bonito. Versão 3.0</p>
         </footer>
     </div>
-
+    
+    <!-- Bootstrap JS para componentes como o accordion -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Biblioteca de Criptografia -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <!-- Script do Dashboard -->
