--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curral Bonito - Gestão Rural Inteligente</title>
+    <title>Curral Bonito - A Elite da Gestão Rural</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS Personalizado -->
@@ -11,77 +11,77 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Cabeçalho -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand logo" href="#">CURRAL BONITO</a>
-            <a href="login.html" class="btn btn-success">Acessar Plataforma</a>
+            <a href="login.html" class="btn btn-primary-custom">Acessar Plataforma</a>
         </div>
     </nav>
 
     <!-- Seção Principal -->
     <header class="main-hero text-white text-center">
         <div class="container">
-            <h1 class="display-3 fw-bold">A Nova Era da Gestão Rural Chegou.</h1>
-            <p class="lead col-lg-8 mx-auto">Tenha o controle total da sua produção na palma da sua mão. Otimize seu tempo, aumente sua lucratividade e gerencie sua fazenda com a tecnologia que você merece.</p>
-            <a href="login.html" class="btn btn-success btn-lg mt-3">Comece a Gerenciar Agora</a>
+            <h1 class="display-3 fw-bold">O Futuro da Sua Fazenda Começa Aqui.</h1>
+            <p class="lead col-lg-8 mx-auto">Tecnologia, controle e lucratividade. A plataforma definitiva para o produtor rural que busca a excelência.</p>
+            <a href="login.html" class="btn btn-light btn-lg mt-3">Transforme sua Gestão Agora</a>
         </div>
     </header>
 
     <!-- Seção de Funcionalidades -->
-    <section class="py-5">
+    <section class="py-5 bg-light">
         <div class="container text-center">
-            <h2 class="mb-5 section-title">Tudo que você precisa em um só lugar</h2>
+            <h2 class="mb-5 section-title">Uma Plataforma Completa e Imponente</h2>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">🐄 Controle de Rebanho</h5>
-                            <p class="card-text">Cadastre e acompanhe cada animal individualmente. Registre nascimentos, mortes, vendas e tenha um inventário sempre atualizado.</p>
+                            <h5 class="card-title">💰 Painel Financeiro</h5>
+                            <p class="card-text">Controle total sobre receitas e despesas. Saiba para onde seu dinheiro vai e veja sua lucratividade crescer.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">🧬 Genealogia e Inseminação</h5>
-                            <p class="card-text">Monitore a linhagem do seu gado, controle as datas de inseminação e preveja os nascimentos com precisão.</p>
+                            <h5 class="card-title">🌿 Controle de Pastagem (UA)</h5>
+                            <p class="card-text">Otimize seu pasto com o cálculo automático de Unidade Animal. Manejo preciso, gado saudável.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">🌽 Gestão de Alimentação</h5>
-                            <p class="card-text">Controle o estoque e o consumo de ração, sal e outros suplementos, garantindo a nutrição ideal para seu rebanho.</p>
+                            <h5 class="card-title">🐄 Inventário de Rebanho</h5>
+                            <p class="card-text">Gerencie cada animal, da genealogia à saúde. Tenha um inventário completo e sempre à mão.</p>
                         </div>
                     </div>
                 </div>
                  <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">💉 Controle Sanitário</h5>
-                            <p class="card-text">Nunca mais perca uma data de vacinação ou vermifugação. Agende e registre todos os manejos sanitários.</p>
+                            <h5 class="card-title">💉 Gestão Sanitária</h5>
+                            <p class="card-text">Agende e registre vacinas e manejos. Cumpra o calendário sanitário sem esforço e evite perdas.</p>
                         </div>
                     </div>
                 </div>
                  <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">📊 Relatórios Simplificados</h5>
-                            <p class="card-text">Visualize dados importantes sobre seu rebanho com gráficos e relatórios fáceis de entender.</p>
+                            <h5 class="card-title">🔒 Segurança Avançada</h5>
+                            <p class="card-text">Seus dados são valiosos. Por isso, todas as informações são criptografadas para sua total tranquilidade.</p>
                         </div>
                     </div>
                 </div>
                  <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm feature-card">
                         <div class="card-body">
-                            <h5 class="card-title">💻 Acesso Fácil e Seguro</h5>
-                            <p class="card-text">Acesse seus dados de qualquer computador. Simples, rápido e com dados criptografados para sua segurança.</p>
+                            <h5 class="card-title">📱 Design Moderno e Responsivo</h5>
+                            <p class="card-text">Acesse de qualquer lugar. Uma interface elegante e intuitiva, no computador, tablet ou celular.</p>
                         </div>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
     </section>
 
     <!-- Rodapé -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">&copy; 2025 Curral Bonito - Todos os direitos reservados.</p>
+    <footer class="footer-custom text-white text-center py-4">
+        <p class="mb-0">&copy; 2025 Curral Bonito - A Elite da Gestão Rural.</p>
     </footer>
 
 </body>
