--- a/login.html
+++ b/login.html
@@ -6,31 +6,34 @@
     <title>Login - Curral Bonito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-light">
 
     <div class="login-container">
-        <div class="card shadow-lg">
+        <div class="card shadow-lg border-0">
             <div class="card-body p-5">
                 <h1 class="text-center mb-4 logo-login">CURRAL BONITO</h1>
-                <h5 class="card-title text-center mb-4">Acesso à Plataforma</h5>
+                <h5 class="card-title text-center text-muted mb-4">Acesso à Plataforma</h5>
                 
                 <div id="alert-placeholder"></div>
 
                 <form id="login-form">
                     <div class="mb-3">
                         <label for="username" class="form-label">Usuário</label>
-                        <input type="text" class="form-control" id="username" required>
+                        <input type="text" class="form-control form-control-lg" id="username" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="password" required>
+                        <input type="password" class="form-control form-control-lg" id="password" required>
                     </div>
-                    <div class="d-grid">
-                        <button type="submit" class="btn btn-success btn-lg">Entrar</button>
+                    <div class="d-grid mt-4">
+                        <button type="submit" class="btn btn-primary-custom btn-lg">Entrar</button>
                     </div>
                 </form>
-                <div class="text-center mt-3">
+                <div class="text-center mt-4">
                     <a href="index.html">Voltar para a página inicial</a>
                 </div>
             </div>
