--- a/index.html
+++ b/index.html
@@ -3,85 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curral Bonito - A Elite da Gestão Rural</title>
-    <!-- Bootstrap CSS -->
+    <title>Curral Bonito - Gestão Rural Profissional</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- CSS Personalizado -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Cabeçalho -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="#">CURRAL BONITO</a>
-            <a href="login.html" class="btn btn-primary-custom">Acessar Plataforma</a>
+            <a class="navbar-brand fw-bold fs-3 text-primary" href="#">
+                <i class="bi bi-award-fill text-warning"></i> CURRAL BONITO
+            </a>
+            <div class="ms-auto">
+                <a href="login.html" class="btn btn-primary btn-lg px-4">
+                    <i class="bi bi-box-arrow-in-right me-2"></i>ACESSAR SISTEMA
+                </a>
+            </div>
         </div>
     </nav>
 
-    <!-- Seção Principal -->
-    <header class="main-hero text-white text-center">
+    <!-- Hero Section -->
+    <section class="hero-section">
         <div class="container">
-            <h1 class="display-3 fw-bold">O Futuro da Sua Fazenda Começa Aqui.</h1>
-            <p class="lead col-lg-8 mx-auto">Tecnologia, controle e lucratividade. A plataforma definitiva para o produtor rural que busca a excelência.</p>
-            <a href="login.html" class="btn btn-light btn-lg mt-3">Transforme sua Gestão Agora</a>
-        </div>
-    </header>
-
-    <!-- Seção de Funcionalidades -->
-    <section class="py-5 bg-light">
-        <div class="container text-center">
-            <h2 class="mb-5 section-title">Uma Plataforma Completa e Imponente</h2>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">💰 Painel Financeiro</h5>
-                            <p class="card-text">Controle total sobre receitas e despesas. Saiba para onde seu dinheiro vai e veja sua lucratividade crescer.</p>
-                        </div>
+            <div class="row align-items-center min-vh-100">
+                <div class="col-lg-6 text-white">
+                    <div class="badge bg-warning text-dark mb-3 px-3 py-2 fs-6">
+                        <i class="bi bi-star-fill"></i> Sistema Premium
                     </div>
+                    <h1 class="display-2 fw-bold mb-4">
+                        Gestão Rural de<br>
+                        <span class="text-warning">Alta Performance</span>
+                    </h1>
+                    <p class="lead fs-4 mb-4">
+                        O sistema mais completo para produtores rurais que buscam excelência. 
+                        Controle total do rebanho, genealogia, finanças e muito mais.
+                    </p>
+                    <a href="login.html" class="btn btn-warning btn-lg px-5 py-3 fw-bold">
+                        <i class="bi bi-rocket-takeoff me-2"></i>COMEÇAR AGORA
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">🌿 Controle de Pastagem (UA)</h5>
-                            <p class="card-text">Otimize seu pasto com o cálculo automático de Unidade Animal. Manejo preciso, gado saudável.</p>
+                <div class="col-lg-6">
+                    <div class="hero-stats">
+                        <div class="stat-card">
+                            <h2 class="fw-bold text-primary">100%</h2>
+                            <p>Seguro e Criptografado</p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">🐄 Inventário de Rebanho</h5>
-                            <p class="card-text">Gerencie cada animal, da genealogia à saúde. Tenha um inventário completo e sempre à mão.</p>
+                        <div class="stat-card">
+                            <h2 class="fw-bold text-primary">∞</h2>
+                            <p>Registros Ilimitados</p>
                         </div>
-                    </div>
-                </div>
-                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">💉 Gestão Sanitária</h5>
-                            <p class="card-text">Agende e registre vacinas e manejos. Cumpra o calendário sanitário sem esforço e evite perdas.</p>
-                        </div>
-                    </div>
-                </div>
-                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">🔒 Segurança Avançada</h5>
-                            <p class="card-text">Seus dados são valiosos. Por isso, todas as informações são criptografadas para sua total tranquilidade.</p>
-                        </div>
-                    </div>
-                </div>
-                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 shadow-sm feature-card">
-                        <div class="card-body">
-                            <h5 class="card-title">📱 Design Moderno e Responsivo</h5>
-                            <p class="card-text">Acesse de qualquer lugar. Uma interface elegante e intuitiva, no computador, tablet ou celular.</p>
+                        <div class="stat-card">
+                            <h2 class="fw-bold text-primary">24/7</h2>
+                            <p>Acesso Total</p>
                         </div>
                     </div>
                 </div>
@@ -89,10 +66,94 @@
         </div>
     </section>
 
-    <!-- Rodapé -->
-    <footer class="footer-custom text-white text-center py-4">
-        <p class="mb-0">&copy; 2025 Curral Bonito - A Elite da Gestão Rural.</p>
+    <!-- Funcionalidades -->
+    <section class="py-5 bg-light">
+        <div class="container py-5">
+            <div class="text-center mb-5">
+                <h2 class="display-4 fw-bold text-primary">Funcionalidades Completas</h2>
+                <p class="lead text-muted">Tudo que você precisa em um só lugar</p>
+            </div>
+
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-primary">
+                            <i class="bi bi-clipboard-data-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Controle de Rebanho</h4>
+                        <p class="text-muted">Cadastro completo de animais com cálculo automático de UA (Unidade Animal) para otimizar o manejo de pastagem.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-success">
+                            <i class="bi bi-diagram-3-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Painel de Genealogia</h4>
+                        <p class="text-muted">Acompanhe a linhagem completa do rebanho. Registre pai, mãe e toda a árvore genealógica dos animais.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-danger">
+                            <i class="bi bi-heart-pulse-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Controle de Inseminação</h4>
+                        <p class="text-muted">Gerencie todo o processo reprodutivo: datas, touros, previsão de parto e taxas de sucesso.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-warning">
+                            <i class="bi bi-prescription2"></i>
+                        </div>
+                        <h4 class="fw-bold">Gestão Sanitária</h4>
+                        <p class="text-muted">Calendário completo de vacinas, vermífugos e medicamentos. Nunca perca uma data importante.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-info">
+                            <i class="bi bi-basket-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Controle de Alimentação</h4>
+                        <p class="text-muted">Gerencie ração, sal mineral, silagem e consumo por UA. Otimize custos e nutrição do rebanho.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-dark">
+                            <i class="bi bi-cash-coin"></i>
+                        </div>
+                        <h4 class="fw-bold">Painel Financeiro</h4>
+                        <p class="text-muted">Controle receitas e despesas. Calculadora automática de lucros, custos e rentabilidade da fazenda.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Final -->
+    <section class="cta-section text-white text-center py-5">
+        <div class="container">
+            <h2 class="display-4 fw-bold mb-4">Pronto para Transformar sua Fazenda?</h2>
+            <p class="lead mb-4">Junte-se aos produtores que já estão usando a tecnologia a seu favor.</p>
+            <a href="login.html" class="btn btn-warning btn-lg px-5 py-3 fw-bold">
+                ACESSAR AGORA
+            </a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-4">
+        <p class="mb-0">&copy; 2025 Curral Bonito - Sistema Profissional de Gestão Rural</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
