--- a/login.html
+++ b/login.html
@@ -5,44 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Curral Bonito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-light">
 
     <div class="login-container">
-        <div class="card shadow-lg border-0">
-            <div class="card-body p-5">
-                <h1 class="text-center mb-4 logo-login">CURRAL BONITO</h1>
-                <h5 class="card-title text-center text-muted mb-4">Acesso à Plataforma</h5>
-                
-                <div id="alert-placeholder"></div>
+        <div class="login-card">
+            <div class="text-center mb-4">
+                <i class="bi bi-award-fill text-warning" style="font-size: 4rem;"></i>
+                <h1 class="fw-bold text-primary mt-3">CURRAL BONITO</h1>
+                <p class="text-muted">Sistema de Gestão Rural</p>
+            </div>
 
-                <form id="login-form">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Usuário</label>
+            <div id="alert-placeholder"></div>
+
+            <form id="login-form">
+                <div class="mb-3">
+                    <label class="form-label fw-bold">Usuário</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
                         <input type="text" class="form-control form-control-lg" id="username" required>
                     </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Senha</label>
+                </div>
+
+                <div class="mb-4">
+                    <label class="form-label fw-bold">Senha</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="bi bi-lock-fill"></i></span>
                         <input type="password" class="form-control form-control-lg" id="password" required>
                     </div>
-                    <div class="d-grid mt-4">
-                        <button type="submit" class="btn btn-primary-custom btn-lg">Entrar</button>
-                    </div>
-                </form>
-                <div class="text-center mt-4">
-                    <a href="index.html">Voltar para a página inicial</a>
                 </div>
-            </div>
+
+                <button type="submit" class="btn btn-primary w-100 btn-lg fw-bold mb-3">
+                    <i class="bi bi-box-arrow-in-right me-2"></i>ENTRAR
+                </button>
+
+                <div class="text-center">
+                    <a href="index.html" class="text-decoration-none">
+                        <i class="bi bi-arrow-left me-1"></i>Voltar para página inicial
+                    </a>
+                </div>
+            </form>
         </div>
     </div>
-    
-    <!-- Biblioteca de Criptografia -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
-    <!-- Script de Login -->
     <script src="js/login.js"></script>
 </body>
 </html>
