--- a/financeiro.html
+++ b/financeiro.html
@@ -20,11 +20,15 @@
         <nav class="sidebar-menu">
             <a href="dashboard.html" class="menu-item"><i class="bi bi-speedometer2"></i><span>Dashboard</span></a>
             <a href="rebanho.html" class="menu-item"><i class="bi bi-clipboard-data"></i><span>Rebanho</span></a>
+            <a href="pesagem.html" class="menu-item"><i class="bi bi-speedometer"></i><span>Pesagem</span></a>
+            <a href="pastagens.html" class="menu-item"><i class="bi bi-grid-3x3-gap"></i><span>Pastagens</span></a>
+            <a href="leite.html" class="menu-item"><i class="bi bi-droplet"></i><span>Produção Leite</span></a>
             <a href="genealogia.html" class="menu-item"><i class="bi bi-diagram-3"></i><span>Genealogia</span></a>
             <a href="inseminacao.html" class="menu-item"><i class="bi bi-heart-pulse"></i><span>Inseminação</span></a>
             <a href="sanitario.html" class="menu-item"><i class="bi bi-prescription2"></i><span>Sanitário</span></a>
             <a href="alimentacao.html" class="menu-item"><i class="bi bi-basket"></i><span>Alimentação</span></a>
             <a href="financeiro.html" class="menu-item active"><i class="bi bi-cash-coin"></i><span>Financeiro</span></a>
+            <a href="relatorios.html" class="menu-item"><i class="bi bi-graph-up"></i><span>Relatórios</span></a>
         </nav>
         <div class="sidebar-footer">
             <button class="btn btn-danger w-100" id="logout-btn"><i class="bi bi-box-arrow-right me-2"></i>Sair</button>
@@ -184,7 +188,7 @@
         });
 
         function carregarFinanceiro() {
-            const lancamentos = DataManager.getFinanceiros();
+            const lancamentos = DataManager.getFinanceiros().sort((a, b) => new Date(b.data) - new Date(a.data));
             const tbody = document.getElementById('financeiro-table');
             
             let totalReceitas = 0;
@@ -219,7 +223,10 @@
             
             document.getElementById('total-receitas').textContent = 'R$ ' + totalReceitas.toFixed(2);
             document.getElementById('total-despesas').textContent = 'R$ ' + totalDespesas.toFixed(2);
-            document.getElementById('saldo-atual').textContent = 'R$ ' + (totalReceitas - totalDespesas).toFixed(2);
+            const saldo = totalReceitas - totalDespesas;
+            const saldoEl = document.getElementById('saldo-atual');
+            saldoEl.textContent = 'R$ ' + saldo.toFixed(2);
+            saldoEl.parentElement.className = saldo >= 0 ? 'card shadow-sm bg-primary text-white' : 'card shadow-sm bg-danger text-white';
         }
 
         carregarFinanceiro();
