--- a/genealogia.html
+++ b/genealogia.html
@@ -20,11 +20,15 @@
         <nav class="sidebar-menu">
             <a href="dashboard.html" class="menu-item"><i class="bi bi-speedometer2"></i><span>Dashboard</span></a>
             <a href="rebanho.html" class="menu-item"><i class="bi bi-clipboard-data"></i><span>Rebanho</span></a>
+            <a href="pesagem.html" class="menu-item"><i class="bi bi-speedometer"></i><span>Pesagem</span></a>
+            <a href="pastagens.html" class="menu-item"><i class="bi bi-grid-3x3-gap"></i><span>Pastagens</span></a>
+            <a href="leite.html" class="menu-item"><i class="bi bi-droplet"></i><span>Produção Leite</span></a>
             <a href="genealogia.html" class="menu-item active"><i class="bi bi-diagram-3"></i><span>Genealogia</span></a>
             <a href="inseminacao.html" class="menu-item"><i class="bi bi-heart-pulse"></i><span>Inseminação</span></a>
             <a href="sanitario.html" class="menu-item"><i class="bi bi-prescription2"></i><span>Sanitário</span></a>
             <a href="alimentacao.html" class="menu-item"><i class="bi bi-basket"></i><span>Alimentação</span></a>
             <a href="financeiro.html" class="menu-item"><i class="bi bi-cash-coin"></i><span>Financeiro</span></a>
+            <a href="relatorios.html" class="menu-item"><i class="bi bi-graph-up"></i><span>Relatórios</span></a>
         </nav>
         <div class="sidebar-footer">
             <button class="btn btn-danger w-100" id="logout-btn"><i class="bi bi-box-arrow-right me-2"></i>Sair</button>
@@ -121,12 +125,11 @@
     <script src="js/data-manager.js"></script>
     <script src="js/main.js"></script>
     <script>
-        // Preenche o select de animais
         function preencherAnimais() {
             const animais = DataManager.getAnimais();
             const select = document.getElementById('gen-animal');
             select.innerHTML = '<option value="">Selecione o animal</option>' + 
-                animais.map(a => `<option value="${a.id}">${a.id} - ${a.nome || 'Sem nome'}</option>`).join('');
+                animais.map(a => `<option value="${a.id}">${a.id} - ${a.nome || 'Sem nome'} (${a.categoria})</option>`).join('');
         }
 
         document.getElementById('genealogia-form').addEventListener('submit', (e) => {
@@ -149,6 +152,12 @@
         function carregarGenealogia() {
             const genealogias = DataManager.getGenealogias();
             const tbody = document.getElementById('genealogia-table');
+            
+            if (genealogias.length === 0) {
+                tbody.innerHTML = '<tr><td colspan="7" class="text-center text-muted">Nenhuma genealogia registrada</td></tr>';
+                return;
+            }
+            
             tbody.innerHTML = genealogias.map(g => `
                 <tr>
                     <td><strong>${g.animalId}</strong></td>
@@ -158,7 +167,7 @@
                     <td>${g.avoMaterno || '-'}</td>
                     <td>${g.obs || '-'}</td>
                     <td>
-                        <button class="btn btn-sm btn-danger" onclick="DataManager.removeGenealogia('${g.uid}'); carregarGenealogia();">
+                        <button class="btn btn-sm btn-danger" onclick="if(confirm('Excluir registro?')) { DataManager.removeGenealogia('${g.uid}'); carregarGenealogia(); }">
                             <i class="bi bi-trash"></i>
                         </button>
                     </td>
