--- a/login.html
+++ b/login.html
@@ -47,6 +47,13 @@
                     </a>
                 </div>
             </form>
+
+            <div class="mt-4 p-3 bg-light rounded">
+                <small class="text-muted d-block mb-2"><strong>Usuários de Teste:</strong></small>
+                <small class="text-muted d-block">• admin / admin123</small>
+                <small class="text-muted d-block">• fazenda / fazenda2025</small>
+                <small class="text-muted d-block">• produtor1 / senha123</small>
+            </div>
         </div>
     </div>
 
