--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curral Bonito - Gestão Rural Profissional</title>
+    <title>Curral Bonito - Sistema Premium de Gestão Rural</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold fs-3 text-primary" href="#">
@@ -88,6 +88,36 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="feature-card">
                         <div class="feature-icon bg-success">
+                            <i class="bi bi-speedometer"></i>
+                        </div>
+                        <h4 class="fw-bold">Controle de Pesagem</h4>
+                        <p class="text-muted">Acompanhe o peso dos animais e calcule automaticamente o GPD (Ganho de Peso Diário) para melhor performance.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-info">
+                            <i class="bi bi-grid-3x3-gap"></i>
+                        </div>
+                        <h4 class="fw-bold">Gestão de Pastagens</h4>
+                        <p class="text-muted">Controle de piquetes, forrageiras e taxa de lotação. Otimize o uso das pastagens e aumente a produtividade.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-info">
+                            <i class="bi bi-droplet-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Produção de Leite</h4>
+                        <p class="text-muted">Registre a produção diária, calcule médias e controle a receita com leite de forma profissional.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-success">
                             <i class="bi bi-diagram-3-fill"></i>
                         </div>
                         <h4 class="fw-bold">Painel de Genealogia</h4>
@@ -132,6 +162,36 @@
                         </div>
                         <h4 class="fw-bold">Painel Financeiro</h4>
                         <p class="text-muted">Controle receitas e despesas. Calculadora automática de lucros, custos e rentabilidade da fazenda.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-primary">
+                            <i class="bi bi-graph-up-arrow"></i>
+                        </div>
+                        <h4 class="fw-bold">Relatórios Completos</h4>
+                        <p class="text-muted">Análise detalhada com indicadores de performance, gráficos e estatísticas da sua propriedade.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-danger">
+                            <i class="bi bi-shield-lock-fill"></i>
+                        </div>
+                        <h4 class="fw-bold">Segurança Máxima</h4>
+                        <p class="text-muted">Dados criptografados com AES-256 e login protegido com hash SHA-256. Sua informação sempre segura.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="feature-card">
+                        <div class="feature-icon bg-success">
+                            <i class="bi bi-wifi-off"></i>
+                        </div>
+                        <h4 class="fw-bold">Funciona Offline</h4>
+                        <p class="text-muted">Todos os dados salvos localmente. Sem necessidade de internet constante ou servidores externos.</p>
                     </div>
                 </div>
             </div>
